@startuml

class Ergebnisse {
  + parteiId: int
  + jahr: int
  + anzahlSitze: int
  + direktMandate: int
  + uberhangsMandate: int
  + ausgleichsMandate: int
}

class Erststimme {
   + id: int
   + kandidaturId : int
}

class ZweitstimmeErgebnisse {
   + id: int
   + jahr: int
   + parteiId : int
   + wahlkreisId: int
   + anzahlStimmen: int
}

class Zweitstimme {
   + id: int
   + ZSErgebnisId: int
}

class Wahlkreis {
  + wahlkreisId: int
  + walhkreisName: String
  + bundesland: String
}

class WahlkreisInfo {
  + wahlkreisId: int
  + jahr: int
  + anzahlWahlBerechtigte: int
  + anzahlWaehlende: int
}

class Bundesland {
  + name: String
  + nurzbezeichnung: String
}

class BundeslandStruktur {
  + kurzbezeichnung: String
  + jahr: int
  + bevoelkerung: int
  + flaeche: float
}

class Kandidat {
  + kandidatId: int
  + titel: String
  + name: String
  + vorname: String
  + geburtsjahr: int
  + parteiId: int
}

class DirektKandidatur {
  + kandidaturId: int
  + kandidatId: int
  + jahr: int
  + wahlkreisId: int
  + anzahlStimmen: int
}

class Partei {
  + parteiId: int
  + parteiName: String
  + Kurzbezeichnung: String
}

class ParteiListe {
  + parteiId: int
  + jahr: int
  + kandidatId: int
  + listenPlatz: int
  + landAbk: string
}

class Landesergebnisse{
  + parteiId: int
  + bundesland: string
  + jahr: int
  + sitze: int
  + ueberhang: int
  + direktMandate: int
}

class Gewaehlte_direkt_kandidaten{
  + kandidaturId: int
  + parteiId: int
  + gewonnene_stimmen: int
}

note right of WahlkreisInfo
  + Einige andere Daten über den Wahlkreis, 
  die für die Berechnung 
  einiger Statistiken mit den 
  Ergebnissen nützlich sein können
end note

note top of Ergebnisse
  Diese Tabelle wird nach der Berechnung 
  der Ergebnisse erstellt und für einen 
  schnelleren Zugriff gespeichert
end note

note top of Gewaehlte_direkt_kandidaten
  Diese Tabelle wird nach der Berechnung 
  der Ergebnisse erstellt und für einen 
  schnelleren Zugriff gespeichert
end note

note top of Landesergebnisse
  Diese Tabelle wird nach der Berechnung 
  der Ergebnisse erstellt und für einen 
  schnelleren Zugriff gespeichert
end note

Wahlkreis " * " --> " 1 " Bundesland 

WahlkreisInfo " * " --> " 1 " Wahlkreis

BundeslandStruktur " * " --> " 1 " Bundesland


ParteiListe " * " --> " 1 " Partei

ParteiListe " * " -->  " * " Kandidat

ParteiListe " * " -->  " 1 " Bundesland

Kandidat " *  " --> " 0..1 " Partei

Kandidat " 1 " <-- " * " DirektKandidatur

DirektKandidatur " * " --> " 1 " Wahlkreis

ZweitstimmeErgebnisse "  * " --> " 1 " Partei

ZweitstimmeErgebnisse " * " --> " 1 " Wahlkreis


Ergebnisse  " * "  --> " 1 "  Partei

Erststimme " * " --> " 1 " DirektKandidatur 

Zweitstimme " * " --> " 1 " ZweitstimmeErgebnisse 

Landesergebnisse  " * "  --> " 1 "  Partei

Landesergebnisse  " * "  --> " 1 "  Bundesland

Gewaehlte_direkt_kandidaten " * " --> " 1 " DirektKandidatur

Gewaehlte_direkt_kandidaten " * " --> " 0..1 " Partei

@enduml